Fix theme-switcher spacing

--- a/css/theme-switcher.css
+++ b/css/theme-switcher.css
@@ -6,9 +6,8 @@
 
   width: 2.5rem;
   height: 2.5rem;
-  margin-top: -1rem;
-  margin-bottom: -1rem;
-  margin-left: -0.5rem;
+  margin: -1rem -0.5rem;
+
   cursor: pointer;
 
   font-family: "Font Awesome 6 Free";
